--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- Panel lewy -->
             <aside class="left-panel" id="leftPanel">
                 <!-- Wybór przestrzeni ładunkowej -->
-                <section class="panel-section">
+                <section class="panel-section container-settings-section">
                     <h3 class="section-title">Przestrzeń ładunkowa</h3>
                     <div class="custom-select-wrapper">
                         <div class="custom-select" id="vehicleSelect">
@@ -110,6 +110,7 @@
                 </section>
 
                 <!-- Jednostki ładunkowe -->
+                <div class="units-scrollable-wrapper">
                 <section class="panel-section">
                     <h3 class="section-title">Jednostki ładunkowe</h3>
                     <div class="cargo-units">
@@ -144,15 +145,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="600" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="600" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="0.6" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="0.60" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -237,15 +241,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="900" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="900" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="0.9" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="0.90" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -330,15 +337,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="950" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="950" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="0.95" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="0.95" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -423,15 +433,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="1100" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="1100" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="1.1" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="1.10" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -516,15 +529,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="1200" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="1200" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="1.2" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="1.20" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -598,15 +614,18 @@
                                     <input type="hidden" class="unit-preset-height" value="180">
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="5000" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="5000" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="5" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="5.00" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -686,15 +705,18 @@
                                     <input type="hidden" class="unit-preset-height" value="120">
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="500" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="500" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="0.5" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="0.50" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -779,15 +801,18 @@
                                     </div>
                                 </div>
                                 <div class="unit-preset-weight-field">
-                                    <label>Waga</label>
+                                    <div class="weight-label-container">
+                                        <span class="weight-label-text">Waga jednej jednostki</span>
+                                        <div class="weight-mode-switch" data-mode="single"></div>
+                                    </div>
                                     <div class="unit-preset-weight-container">
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-kg" value="100" min="0.1" step="0.1">
+                                            <input type="number" class="unit-preset-weight-kg" value="100" min="1" step="1">
                                             <span class="input-unit">kg</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="weight-input-group">
-                                            <input type="number" class="unit-preset-weight-t" value="0.1" min="0.001" step="0.001">
+                                            <input type="number" class="unit-preset-weight-t" value="0.10" min="0.01" step="0.01">
                                             <span class="input-unit">t</span>
                                         </div>
                                     </div>
@@ -842,6 +867,7 @@
                         </div>
                     </div>
                 </section>
+                </div>
             </aside>
 
             <!-- Scena 3D -->
