--- a/index.html
+++ b/index.html
@@ -638,12 +638,12 @@
                                         <label>Piętrowanie</label>
                                         <div class="unit-preset-stack-group">
                                             <div class="stack-input-group">
-                                                <input type="number" class="unit-preset-stack" value="0" min="0" max="10">
+                                                <input type="number" class="unit-preset-stack" value="0" min="0" max="0" disabled readonly style="background-color: #f3f4f6; cursor: not-allowed;">
                                             <span class="input-unit">szt</span>
                                         </div>
                                         <span class="field-separator">/</span>
                                         <div class="stack-input-group">
-                                            <input type="number" class="unit-preset-max-weight" value="0" min="0">
+                                            <input type="number" class="unit-preset-max-weight" value="0" min="0" max="0" disabled readonly style="background-color: #f3f4f6; cursor: not-allowed;">
                                                 <span class="input-unit">kg</span>
                                             </div>
                                         </div>
