--- a/index.html
+++ b/index.html
@@ -1120,11 +1120,11 @@
                                 </svg>
                                 Wczytaj
                             </button>
-                            <button id="generateReport" class="btn btn-small" title="Generuj raport">
+                            <button id="exportPDF2" class="btn btn-small" title="Eksportuj do PDF">
                                 <svg class="icon" viewBox="0 0 24 24">
-                                    <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/>
+                                    <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                                 </svg>
-                                Raport
+                                Export PDF
                             </button>
                         </div>
                     </section>
@@ -1184,6 +1184,14 @@
                 <!-- Konfiguracja liczby osi -->
                 <div class="settings-section">
                     <h3>Konfiguracja osi</h3>
+                    
+                    <!-- Toggle for axle load display -->
+                    <div class="settings-group">
+                        <label class="settings-label checkbox-label">
+                            <input type="checkbox" id="showAxleLoadsOn3D" class="settings-checkbox">
+                            <span>Pokaż obciążenie na osiach w widoku 3D</span>
+                        </label>
+                    </div>
                     
                     <div class="settings-group">
                         <label class="settings-label">Liczba osi ciągnących (ciągnik):</label>
