--- a/index.html
+++ b/index.html
@@ -1065,19 +1065,19 @@
                                     <span class="stat-value">0%</span>
                                 </div>
                             </div>
-                            <div class="stat-row">
+                            <div class="stat-row single-line">
                                 <div class="stat-item-compact">
                                     <span class="stat-label">Waga</span>
-                                    <span class="stat-value">0 kg</span>
+                                    <span class="stat-value">0 / 0 kg</span>
                                 </div>
                                 <div class="stat-item-compact">
-                                    <span class="stat-label">Liczba</span>
+                                    <span class="stat-label">Jednostki</span>
                                     <span class="stat-value">0</span>
                                 </div>
-                            </div>
-                            <div class="stat-item-compact full-width">
-                                <span class="stat-label">Środek ciężkości</span>
-                                <span class="stat-value-small">X: 0m Y: 0m Z: 0m</span>
+                                <div class="stat-item-compact">
+                                    <span class="stat-label">Grupy</span>
+                                    <span class="stat-value">0</span>
+                                </div>
                             </div>
                         </div>
                     </section>
