--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                 <div class="scene-top-bar">
                     <div class="logo-section">
                         <a href="https://transport-nomad.com" target="_blank" class="logo-link">
-                            <img id="app-logo" src="" alt="Transport Nomad" class="scene-logo">
+                            <img id="app-logo" src="logo_black_small_com.png" alt="Transport Nomad" class="scene-logo">
                         </a>
                     </div>
                     <div class="scene-controls">
