--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                             <div class="unit-preset-params">
                                 <div class="unit-preset-dimensions" style="display: flex; gap: 10px; align-items: flex-end;">
                                     <div class="unit-preset-dim-field">
-                                        <label data-i18n="diameter">Diameter</label>
+                                        <label>Średnica</label>
                                         <div class="dim-input-group">
                                             <input type="number" class="unit-preset-length unit-preset-diameter" data-dimension="diameter" value="80" min="1" step="1">
                                             <span class="input-unit">cm</span>
@@ -791,7 +791,7 @@
                                         </div>
                                     </div>
                                     <div class="unit-preset-dim-field" style="flex: 0 0 auto;">
-                                        <label data-i18n="orientation">Orientation</label>
+                                        <label>Orientacja</label>
                                         <button class="orientation-toggle-btn" data-orientation="vertical" data-i18n-prefix="⬆ " data-i18n="vertical" style="background: white; border: 1px solid #e5e7eb; border-radius: 4px; padding: 0.25rem 0.5rem; cursor: pointer; font-size: 0.875rem; height: auto; white-space: nowrap; font-weight: 400; color: #1f2937; line-height: 1.2;">
                                             ⬆ Vertical
                                         </button>
