--- a/index.html
+++ b/index.html
@@ -995,6 +995,14 @@
                             <span data-i18n="exportPDF">Export PDF</span>
                         </button>
                     </div>
+                    <div class="maps-section">
+                        <a href="https://transport-nomad.com/app" target="_blank" class="btn btn-secondary">
+                            <svg class="icon" viewBox="0 0 24 24">
+                                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                            </svg>
+                            <span>Maps</span>
+                        </a>
+                    </div>
                 </div>
                 
                 <div id="threejs-container"></div>
